# exwlshelleventloop

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _typos.toml  log.txt
.github/workflows/: rustci.yml  typos.yml
examples/: simple.rs
exwlshellev/: Cargo.toml  README.md
exwlshellev/examples/: simpleshell.rs
exwlshellev/src/: events.rs  lib.rs  seat.rs  strtoshape.rs
iced_examples/application_launcher/: Cargo.toml
iced_examples/application_launcher/src/: applications.rs  main.rs  systemd.rs
iced_examples/bottom_panel/: Cargo.toml  readme.md
iced_examples/bottom_panel/src/: applications.rs  main.rs
iced_examples/counter/: Cargo.toml
iced_examples/counter/src/: main.rs
iced_examples/counter_lock/: Cargo.toml
iced_examples/counter_lock/src/: main.rs
iced_examples/counter_lock_pattern/: Cargo.toml
iced_examples/counter_lock_pattern/src/: main.rs
iced_examples/counter_mulit/: Cargo.toml
iced_examples/counter_mulit/src/: main.rs
iced_examples/counter_mulit_pattern/: Cargo.toml
iced_examples/counter_mulit_pattern/src/: main.rs
iced_examples/counter_multi/: Cargo.toml
iced_examples/counter_multi/src/: main.rs
iced_examples/counter_muti/: Cargo.toml
iced_examples/counter_muti/src/: main.rs
iced_examples/counter_output_select/: Cargo.toml
iced_examples/counter_output_select/src/: main.rs
iced_examples/counter_pattern/: Cargo.toml
iced_examples/counter_pattern/src/: main.rs
iced_examples/counter_timer/: Cargo.toml
iced_examples/counter_timer/src/: main.rs
iced_examples/counter_universe/: Cargo.toml
iced_examples/counter_universe/src/: main.rs
iced_examples/counter_virtual_keyboard/: Cargo.toml
iced_examples/counter_virtual_keyboard/src/: main.rs
iced_examples/iced_launcher/: Cargo.toml
iced_examples/iced_launcher/src/: main.rs
iced_examples/iced_virtualkeyboard/: Cargo.toml  readme.md
iced_examples/iced_virtualkeyboard/src/: main.rs
iced_examples/input_regions/: Cargo.toml
iced_examples/input_regions/src/: main.rs
iced_examples/multi_window/: Cargo.toml
iced_examples/multi_window/src/: main.rs
iced_examples/redraw/: Cargo.toml
iced_examples/redraw/src/: main.rs
iced_examples/zbus_invoked_widget/: Cargo.toml  README.md
iced_examples/zbus_invoked_widget/src/: main.rs
iced_exdevtools/: Cargo.toml
iced_exdevtools/src/: comet.rs  executor.rs  keymap.rs  lib.rs  time_machine.rs
iced_exwlshell/: Cargo.toml  README.md
iced_exwlshell/src/: actions.rs  build_pattern.rs  clipboard.rs  conversion.rs  error.rs  event.rs  lib.rs  multi_window.rs  proxy.rs  settings.rs
iced_exwlshell/src/build_pattern/: daemon.md  daemon.rs
iced_exwlshell/src/conversion/: keymap.rs
iced_exwlshell/src/multi_window/: state.rs  window_manager.rs
iced_exwlshell/tests/: test_macro.rs
iced_exwlshell_macros/: Cargo.toml
iced_exwlshell_macros/src/: lib.rs
iced_layershell/: Cargo.toml  README.md
iced_layershell/examples/: input_regions.rs
iced_layershell/src/: actions.rs  application.rs  build_pattern.rs  clipboard.rs  conversion.rs  error.rs  event.rs  ime_preedit.rs  lib.rs  multi_window.rs  program.rs  proxy.rs  sandbox.rs  settings.rs  user_interface.rs
iced_layershell/src/application/: state.rs
iced_layershell/src/build_pattern/: application.md  application.rs  daemon.md  daemon.rs
iced_layershell/src/build_pattern/application/: time.rs
iced_layershell/src/conversion/: keymap.rs
iced_layershell/src/multi_window/: state.rs  window_manager.rs
iced_layershell/tests/: test_macro.rs
iced_layershell_derive/: Cargo.toml
iced_layershell_derive/src/: lib.rs
iced_layershell_macros/: Cargo.toml
iced_layershell_macros/src/: lib.rs
iced_layershell_macros/tests/: macro_test.rs
iced_sessionlock/: Cargo.toml  README.md
iced_sessionlock/src/: actions.rs  build_pattern.rs  clipboard.rs  conversion.rs  error.rs  event.rs  lib.rs  multi_window.rs  program.rs  proxy.rs  settings.rs  user_interface.rs
iced_sessionlock/src/conversion/: keymap.rs
iced_sessionlock/src/multi_window/: state.rs  window_manager.rs
iced_sessionlock/tests/: macro_test.rs
iced_sessionlock_macros/: Cargo.toml
iced_sessionlock_macros/src/: lib.rs
iced_sessionlock_macros/tests/: macro_test.rs
iced_wayland_subscriber/: Cargo.toml  README.md
iced_wayland_subscriber/src/: lib.rs
layershellev/: Cargo.toml  README.md
layershellev/examples/: simple.rs  simplelayer.rs
layershellev/src/: dpi.rs  events.rs  id.rs  key.rs  keyboard.rs  keymap.rs  lib.rs  seat.rs  strtoshape.rs  xkb_keyboard.rs
sessionlockev/: Cargo.toml  README.md
sessionlockev/examples/: simple.rs  simplelock.rs
sessionlockev/src/: events.rs  keyboard.rs  keymap.rs  lib.rs  seat.rs
src/: events.rs  lib.rs  main.rs
starcolorkeyboard/: Cargo.toml  LICENSE  README.md
starcolorkeyboard/asserts/layoutassert/: us.json
starcolorkeyboard/asserts/mainkeylayout/: enUS.json
starcolorkeyboard/src/: consts.rs  keyboardlayouts.rs  main.rs  otherkeys.rs  pangoui.rs
starcolorkeyboard/src/pangoui/: mainkeyboard.rs  smallkeyboard.rs
waycrate_xkbkeycode/: Cargo.toml  README.md
waycrate_xkbkeycode/src/: keyboard.rs  keymap.rs  lib.rs  xkb_keyboard.rs
