[workspace]
resolver = "2"
members = [
  "layershellev",
  "iced_layershell",
  "iced_layershell_macros",
  "iced_sessionlock",
  "iced_sessionlock_macros",
  "starcolorkeyboard",
  "sessionlockev",
  "waycrate_xkbkeycode",
  "iced_examples/*",
]

[workspace.package]
authors = [
  "Decodertalkers <aakari@tutanota.com>",
  "Aakash Sen Sharma <aakashsensharma@gmail.com>",
]
edition = "2024"
version = "0.13.5"
license = "MIT"
repository = "https://github.com/waycrate/exwlshelleventloop"
description = "Wayland extra shell lib"
keywords = ["wayland", "wlroots"]
readme = "README.md"

[workspace.dependencies]
layershellev = { version = "0.13.5", path = "./layershellev" }
sessionlockev = { version = "0.13.5", path = "./sessionlockev" }

iced_layershell = { version = "0.13.5", path = "./iced_layershell" }
iced_layershell_macros = { version = "0.13.5", path = "./iced_layershell_macros" }
iced_sessionlock = { version = "0.13.5", path = "./iced_sessionlock" }
iced_sessionlock_macros = { version = "0.13.5", path = "./iced_sessionlock_macros" }
waycrate_xkbkeycode = { version = "0.13.5", path = "./waycrate_xkbkeycode" }

tempfile = "3.19.0"
thiserror = "1.0.69"
wayland-client = { version = "0.31.7" }

wayland-protocols = { version = "0.32.5", default-features = false, features = [
  "unstable",
  "staging",
  "client",
] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }

wayland-cursor = "0.31.7"

wayland-protocols-wlr = { version = "0.3.5", default-features = false, features = [
  "client",
] }

wayland-protocols-misc = { version = "0.3.5", features = ["client"] }
wayland-backend = { version = "0.3.7", features = ["client_system"] }

#sctk = { package = "smithay-client-toolkit", version = "0.19.2", features = [
#  "calloop",
#] }

calloop = "0.14.1"
calloop-wayland-source = "0.4.0"

rwh_05 = { package = "raw-window-handle", version = "0.5.2", features = [
  "std",
] }
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"] }

iced = { git = "https://github.com/iced-rs/iced.git" }
iced_runtime = { git = "https://github.com/iced-rs/iced.git" }
#iced_style = "0.13"
iced_core = { git = "https://github.com/iced-rs/iced.git" }
iced_renderer = { git = "https://github.com/iced-rs/iced.git" }
iced_futures = { git = "https://github.com/iced-rs/iced.git" }
iced_graphics = { git = "https://github.com/iced-rs/iced.git" }
window_clipboard = "0.4.1"

bitflags = "2.9.0"
log = "0.4.22"
enumflags2 = "0.7.11"

xkbcommon-dl = "0.4.2"
smol_str = "0.2.2"     #NOTE: follow iced
memmap2 = "0.9.5"

tracing = "0.1.40"
futures = "0.3.31"

darling = { version = "0.20.10", features = ["suggestions"] }
manyhow = { version = "0.11.4", features = ["darling"] }
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
