[workspace]
resolver = "2"
members = [
  "layershellev",
  "iced_layershell",
  "iced_layershell_macros",
  "iced_sessionlock",
  "iced_sessionlock_macros",
  "starcolorkeyboard",
  "sessionlockev",
  "waycrate_xkbkeycode",
  "iced_exdevtools",
  "iced_examples/*",
]

[workspace.package]
authors = [
  "Decodertalkers <aakari@tutanota.com>",
  "Aakash Sen Sharma <aakashsensharma@gmail.com>",
]
edition = "2024"
version = "0.14.2"
license = "MIT"
repository = "https://github.com/waycrate/exwlshelleventloop"
description = "Wayland extra shell lib"
keywords = ["wayland", "wlroots"]
readme = "README.md"

[workspace.dependencies]
layershellev = { version = "0.14.2", path = "./layershellev" }
sessionlockev = { version = "0.14.2", path = "./sessionlockev" }

iced_layershell = { version = "0.14.2", path = "./iced_layershell" }
iced_exdevtools = { version = "0.14.2", path = "./iced_exdevtools" }
iced_layershell_macros = { version = "0.14.2", path = "./iced_layershell_macros" }
iced_sessionlock = { version = "0.14.2", path = "./iced_sessionlock" }
iced_sessionlock_macros = { version = "0.14.2", path = "./iced_sessionlock_macros" }
waycrate_xkbkeycode = { version = "0.14.2", path = "./waycrate_xkbkeycode" }

tempfile = "3.23.0"
thiserror = "2.0.12"
wayland-client = { version = "0.31.7" }

wayland-protocols = { version = "0.32.5", default-features = false, features = [
  "unstable",
  "staging",
  "client",
] }

tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }

wayland-cursor = "0.31.7"

wayland-protocols-wlr = { version = "0.3.5", default-features = false, features = [
  "client",
] }

wayland-protocols-misc = { version = "0.3.5", features = ["client"] }
wayland-backend = { version = "0.3.7", features = ["client_system"] }

#sctk = { package = "smithay-client-toolkit", version = "0.19.2", features = [
#  "calloop",
#] }

calloop = "0.14.1"
calloop-wayland-source = "0.4.0"

rwh_05 = { package = "raw-window-handle", version = "0.5.2", features = [
  "std",
] }
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"] }

iced = "0.14"
iced_runtime = "0.14"
iced_core = "0.14"
iced_program = "0.14"
iced_renderer = "0.14"
iced_futures = "0.14"
iced_graphics = "0.14"
iced_debug = "0.14"
iced_devtools = "0.14"
iced_widget = "0.14"
window_clipboard = "0.5.0"

bitflags = "2.9.0"
log = "0.4.22"
enumflags2 = "0.7.11"

xkbcommon-dl = "0.4.2"
smol_str = "0.2.2"     #NOTE: follow iced
memmap2 = "0.9.5"

tracing = "0.1.40"
futures = "0.3.31"

darling = { version = "0.20.10", features = ["suggestions"] }
manyhow = { version = "0.11.4", features = ["darling"] }
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
