[package]
name = "iced_exdevtools"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme = "README.md"
description = "layershell binding for iced"

[features]
time-travel = ["iced_program/time-travel"]

[dependencies]
iced_debug.workspace = true
iced_program.workspace = true
iced_widget.workspace = true

log.workspace = true
