[package]
name = "iced_layershell"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme = "README.md"
description = "layershell binding for iced"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced.workspace = true
iced_renderer.workspace = true
iced_runtime.workspace = true
iced_core.workspace = true
iced_futures.workspace = true
iced_graphics.workspace = true
iced_layershell_macros.workspace = true
tracing.workspace = true
thiserror.workspace = true
layershellev.workspace = true
window_clipboard.workspace = true
log.workspace = true
futures.workspace = true
