[package]
name = "iced_layershell"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme = "README.md"
description = "layershell binding for iced"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tiny-skia", "wgpu", "fira-sans"]
tiny-skia = ["iced/tiny-skia", "iced_renderer/tiny-skia"]
wgpu = ["iced/wgpu", "iced_renderer/wgpu"]
fira-sans = ["iced/fira-sans", "iced_renderer/fira-sans"]
debug = ["iced/debug"]
time-travel = ["iced/time-travel"]

[dependencies]
iced.workspace = true
iced_renderer.workspace = true
iced_runtime.workspace = true
iced_core.workspace = true
iced_futures.workspace = true
iced_graphics.workspace = true
iced_layershell_macros.workspace = true
#iced_program.workspace = true
iced_debug.workspace = true
#iced_devtools.workspace = true
tracing.workspace = true
thiserror.workspace = true
layershellev.workspace = true
window_clipboard.workspace = true
log.workspace = true
futures.workspace = true
enumflags2.workspace = true
