[package]
name = "iced_layershell_macros"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.20.10", features = ["diagnostics", "suggestions"] }
manyhow = { version = "0.11.4", features = ["darling"] }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
