[package]
name = "iced_sessionlock"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme = "README.md"
description = "sessionlock binding for iced"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced.workspace = true
iced_renderer.workspace = true
iced_runtime.workspace = true
#iced_style.workspace = true
iced_core.workspace = true
iced_futures.workspace = true
iced_graphics.workspace = true
tracing.workspace = true
thiserror.workspace = true
sessionlockev.workspace = true
futures.workspace = true
window_clipboard.workspace = true
log.workspace = true
