[package]
name = "iced_wayland_subscriber"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme = "README.md"
description = "wayland subscriber for iced"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
iced = { workspace = true, features = ["advanced"] }
wayland-client.workspace = true

wayland-protocols.workspace = true
thiserror.workspace = true
