[package]
name = "starcolorkeyboard"
authors.workspace = true
version = "0.2.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace dependencies
layershellev.workspace = true
tempfile.workspace = true

xkbcommon = "0.7.0"

cairo-rs = "0.18.2"
pango = "0.19.5"
pangocairo = "0.19.2"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bitflags.workspace = true
memmap2 = "0.9.0"
