[package]
name = "starcolorkeyboard"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace dependencies
layershellev.workspace = true
tempfile.workspace = true

xkbcommon = "0.8.0"

cairo-rs = "0.20.5"
pango = "0.21.1"
pangocairo = "0.20.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bitflags.workspace = true
memmap2.workspace = true
