[package]
name = "bottom_panel"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { workspace = true, features = ["image", "svg"] }
iced_runtime.workspace = true
iced_layershell.workspace = true
gio = "0.20.4"
regex = "1.11.0"
xdg = "2.5.2"
tracing = "0.1.40"
