[package]
name = "bottom_panel"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { workspace = true, features = ["tokio", "image", "svg"] }
iced_runtime.workspace = true
iced_layershell.workspace = true
gio = "0.21.1"
regex = "1.11.1"
xdg = "3.0.0"
tracing = "0.1.40"
