[package]
name = "counter"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { workspace = true, features = ["thread-pool"] }
iced_runtime.workspace = true
iced_layershell = { workspace = true, features = ["debug"] }
