[package]
name = "iced_virtualkeyboard"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
iced = { version = "0.13.1", features = ["canvas"] }
iced_runtime.workspace = true
iced_layershell.workspace = true
xkbcommon = "0.6.0"
tempfile.workspace = true

