[package]
name = "iced_virtualkeyboard"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
publish = false

[dependencies]
iced = { workspace = true, features = ["canvas"] }
iced_runtime.workspace = true
iced_layershell.workspace = true
xkbcommon = "0.9.0"
tempfile.workspace = true
