[package]
name = "zbus_invoked_widget"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
iced = { workspace = true, features = ["tokio"] }
iced_runtime.workspace = true
iced_layershell.workspace = true

zbus = { version = "5.3.0", default-features = false, features = ["tokio"] }
futures = "0.3.31"
