[package]
name = "zbus_invoked_widget"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
publish = false

[dependencies]
iced.workspace = true
iced_runtime.workspace = true
iced_layershell.workspace = true

zbus = "5.13.2"
futures = "0.3.31"
